upgrade @trpc libraries

--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,13 @@
     "@mantine/core": "^7.7.1",
     "@mantine/hooks": "^7.7.1",
     "@tanstack/react-query": "^5.28.14",
-    "@trpc/client": "^10.45.2",
-    "@trpc/react-query": "^10.45.2",
-    "@trpc/server": "^10.45.2",
+    "@trpc/client": "next",
+    "@trpc/react-query": "next",
+    "@trpc/server": "next",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
+    "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
     "zod": "^3.22.4"
   },
